--- a/meetups.html
+++ b/meetups.html
@@ -4,15 +4,16 @@ title: Meetups
 caption: Join us
 subtitle: Come join one of our upcoming meetups!
 icon: direction
-background: "#4054B2"
+background: "url(/images/bahk-red-skyline.png) #FF0000"
 permalink: /meetups/
 navigation: visible
 ---
-
+      <p><a href="https://www.meetup.com/Bitcoin-HK/">Join our Meetup.com group</a> to never miss a meetup!
       <h2>Upcoming Meetups</h2>
       <div class="meetups">
         {% assign curDate = site.time | date: '%s' %}
-          {% for post in site.categories.meetup %}
+        {% for post in site.posts %}
+        {% if post.layout == "meetup" %}
             {% assign postStartDate = post.date | date: '%s' %}
             {% if postStartDate > curDate %}
               <a class="post-link white-box" href="{{ post.url | prepend: site.baseurl }}">
@@ -27,14 +28,16 @@ navigation: visible
               </a>
               <br>
             {% endif %}
+            {% endif %}
           {% endfor %}
         </div>
         <br>
 
-        <h2>Recent Meetups</h2>
+        <h2>Past Meetups</h2>
         <div class="meetups">
           {% assign curDate = site.time | date: '%s' %}
-            {% for post in site.categories.meetup %}
+            {% for post in site.posts %}
+            {% if post.layout == "meetup" %}
               {% assign postStartDate = post.date | date: '%s' %}
               {% if curDate > postStartDate %}
               <a class="post-link white-box" href="{{ post.url | prepend: site.baseurl }}">
@@ -48,6 +51,7 @@ navigation: visible
                 <p>{{ post.date | date: "%H:%M" }} at {{ post.address }}</p>
               </a>
               <br>
+              {% endif %}
               {% endif %}
             {% endfor %}
           </div>
