create the blog page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ background: "url(/images/bahk-red-skyline.png) #FF0000"
             {% endfor %}
           </div>
 
-          <p><a href="/meetups/">All Meetups</a> • <a href="/blog">All Blog Posts</a></p>
+          <p><a href="/meetups/">All Meetups</a> • <a href="/blog/">All Blog Posts</a></p>
 
 
   </div>
