embed discourse for comments

--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@ navigation: visible
                 {% if post.subtitle %}
                 <p>{{ post.subtitle }}</p>
                 {% else %}
-                <p>{% if post.author %}Written by {{ post.author }}{% endif %}</p>
+                <p>{% if post.author %}Written by +{{ post.author }}{% endif %}</p>
                 {% endif %}
               </a>
               <br>
