--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ background: "url(/images/bahk-red-skyline.png) #FF0000"
                 {% if post.subtitle %}
                 <p>{{ post.subtitle }}</p>
                 {% else %}
-                <p>{% if post.author %}Written by {{ post.author }}{% endif %}</p>
+                <p>{% if post.author %}Written by +{{ post.author }}{% endif %}</p>
                 {% endif %}
                 {% endif %}
               </a>
