--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@ background: "url(/images/bahk-red-skyline.png) #FF0000"
         <h2>Recent happenings</h2>
         <div class="meetups">
           {% assign curDate = site.time | date: '%s' %}
-            {% for post in site.posts limit:5%}
+
+          {% assign count = 0 %}
+          {% assign recent_limit = 5 %}
+
+
+            {% for post in site.posts %}
               {% assign postStartDate = post.date | date: '%s' %}
               {% if curDate > postStartDate %}
+
               <a class="post-link white-box" href="{{ post.url | prepend: site.baseurl }}">
                 <div class="preview" style="background:{{ post.background }}">
                   <div class="date">
@@ -67,6 +73,10 @@ background: "url(/images/bahk-red-skyline.png) #FF0000"
                 {% endif %}
               </a>
               <br>
+              {% assign count = count | plus: 1 %}
+              {% if count >= recent_limit %}
+              {% break %}
+              {% endif %}
               {% endif %}
             {% endfor %}
           </div>
