don't display site description on every page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 background: "url(/images/bahk-red-skyline.png) #FF0000"
+excerpt: "Fostering and promoting Bitcoin and its technology in Hong Kong."
 ---
 
 <header>
