--- a/podcast/index.html
+++ b/podcast/index.html
@@ -9,7 +9,7 @@ permalink: /bitcoin-lecture-series/
 navigation: visible
 ---
       <p><a href="/bitcoin-lecture-series/podcast.xml">Podcast Feed</a> •
-        <a href="/bitcoin-lecture-series/podcast.xml">iTunes</a> •
+        <a href="https://itunes.apple.com/us/podcast/the-bitcoin-lecture-series/id1096689567">iTunes</a> •
         <a href="https://www.youtube.com/playlist?list=PLzntL9E2Gq2x3JvKQ9DEBKKkqjjmN4c9q">Youtube</a>
       </p>
       <h2>Episodes</h2>
