--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@ navigation: visible
         <div class="meetups">
           {% assign curDate = site.time | date: '%s' %}
             {% for post in site.posts %}
-            {% if post.layout != "meetup" %}
+            {% if post.layout == "blog" %}
               {% assign postStartDate = post.date | date: '%s' %}
               {% if curDate > postStartDate %}
               <a class="post-link white-box" href="{{ post.url | prepend: site.baseurl }}">
