add tons of meetups

--- a/devs.html
+++ b/devs.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Meetups
+title: Developer Meetups
 caption: Join us
 subtitle: Come join one of our upcoming meetups!
 icon: direction
