--- a/meetups.html
+++ b/meetups.html
@@ -13,7 +13,7 @@ navigation: visible
       <div class="meetups">
         {% assign curDate = site.time | date: '%s' %}
         {% for post in site.posts %}
-        {% if post.layout != "blog" %}
+        {% if post.layout == "meetup" %}
             {% assign postStartDate = post.date | date: '%s' %}
             {% if postStartDate > curDate %}
               <a class="post-link white-box" href="{{ post.url | prepend: site.baseurl }}">
@@ -37,7 +37,7 @@ navigation: visible
         <div class="meetups">
           {% assign curDate = site.time | date: '%s' %}
             {% for post in site.posts %}
-            {% if post.layout != "blog" %}
+            {% if post.layout == "meetup" %}
               {% assign postStartDate = post.date | date: '%s' %}
               {% if curDate > postStartDate %}
               <a class="post-link white-box" href="{{ post.url | prepend: site.baseurl }}">
