--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-background: "url(/images/bahk-red-skyline.png) #FF0000"
+background: "url(/images/hk-nightline-01.png) #FF0000"
 excerpt: "Fostering and promoting Bitcoin and its technology in Hong Kong."
 ---
 
