--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Blog
-background: "url(/images/bahk-red-skyline.png) #FF0000"
+background: "url(/images/bahk-talk-01.png) #FF0000"
 permalink: /blog/
 navigation: visible
 ---
