--- a/meetups.html
+++ b/meetups.html
@@ -4,7 +4,7 @@ title: Meetups
 caption: Join us
 subtitle: Come join one of our upcoming meetups!
 icon: direction
-background: "url(/images/bahk-red-skyline.png) #FF0000"
+background: "url(/images/bahk-spotmeetup-01.jpg) #FF0000"
 permalink: /meetups/
 navigation: visible
 ---
